Wed Oct 22 22:45:49 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Default to the Buddy List preference page when entering the
	    Preferences dialog.

Wed Oct 22 22:41:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaim.h:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimMainWindow.cpp:
	* src/QGaimMainWindow.h:
	* src/QGaimRequest.cpp:
	* src/main.cpp:
	  - Removed the QGaim class, and added QGaimMainWindow. This cleans up
	    the code just a tad, and will allow for some startup progress stuff.

Wed Oct 22 20:52:15 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	* gaim.pro:
	  - We're now using libopie!

Mon Oct 20 22:13:34 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimInputDialog.cpp:
	  - Fixed a compiler error.

Mon Oct 20 20:56:46 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Setup the base framework for the preference pages.

Mon Oct 20 20:03:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Added icons to the tabs in the preferences.

Mon Oct 20 18:51:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Show the preferences dialog full-screen.

	* src/QGaimPrefsDialog.cpp:
	  - The tab widget in the prefs dialog now takes up the whole dialog.

Mon Oct 20 18:46:22 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Added the Preferences item to the drop-down menu in the buddy list.

Mon Oct 20 18:30:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	* gaim.pro:
	  - Allow QGaimPrefsDialog to compile.

Sat Sep 27 00:40:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
