@@ -1,3 +1,9 @@
+Wed Oct 22 22:58:01 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimMainWindow.cpp:
+	  - Closing the window on a conversation no longer closes Gaim.
+
 Wed Oct 22 22:45:49 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimPrefsDialog.cpp:
